gitops/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-platform
  namespace: devops-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-platform
  template:
    metadata:
      labels:
        app: devops-platform
    spec:
      containers:
        - name: devops-platform
          image: agarciafer/devops-platform:v5
          ports:
            - containerPort: 5000
