gitops/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rules-gitops
  labels:
    app: hola
spec:
  ingressClassName: nginx
  rules:
  - host: devops.10.0.0.21.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: devops-platform-service
            port:
              number: 5000
